[gd_scene load_steps=37 format=2]

[ext_resource path="res://mathieu-chauderlot-room-0017-layer-11.jpg" type="Texture" id=1]
[ext_resource path="res://Protótipo batalha - visão geral/Cartas/carta gorgon inteira.png" type="Texture" id=2]
[ext_resource path="res://Protótipo batalha - visão geral/Personagem/Attack3.png" type="Texture" id=3]
[ext_resource path="res://Personagem1.gd" type="Script" id=4]
[ext_resource path="res://Protótipo batalha - visão geral/Bosses/mago.png" type="Texture" id=9]
[ext_resource path="res://Protótipo batalha - visão geral/Fundo/Caixa-fundo-cartas.png" type="Texture" id=10]
[ext_resource path="res://Protótipo batalha - visão geral/Personagem/personagem1.png" type="Texture" id=11]
[ext_resource path="res://TextureProgress.gd" type="Script" id=13]
[ext_resource path="res://Protótipo batalha - visão geral/HealthBar/health-under.png" type="Texture" id=14]
[ext_resource path="res://Protótipo batalha - visão geral/HealthBar/health-over.png" type="Texture" id=15]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 9 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 9 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 9 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 9 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 9 )
region = Rect2( 560, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 9 )
region = Rect2( 640, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 9 )
region = Rect2( 720, 0, 80, 80 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 11 )
region = Rect2( 160, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 11 )
region = Rect2( 320, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 11 )
region = Rect2( 480, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 11 )
region = Rect2( 640, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 11 )
region = Rect2( 800, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 11 )
region = Rect2( 960, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 11 )
region = Rect2( 1120, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 160, 111 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 12.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="GDScript" id=26]
script/source = "extends AnimatedSprite


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[node name="Node2D" type="Node2D"]
position = Vector2( 5, 0 )
script = ExtResource( 13 )

[node name="Mathieu-chauderlot-room-0017-layer-11" type="Sprite" parent="."]
position = Vector2( 685.5, 392 )
scale = Vector2( 0.772396, 0.783333 )
texture = ExtResource( 1 )

[node name="Caixa-fundo-cartas" type="Sprite" parent="."]
position = Vector2( 720.949, 700.917 )
scale = Vector2( 4.54564, 1.49061 )
texture = ExtResource( 10 )

[node name="Mago" type="AnimatedSprite" parent="."]
position = Vector2( 994, 413 )
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="Personagem1" type="AnimatedSprite" parent="."]
position = Vector2( 263, 381 )
scale = Vector2( 3, 3 )
frames = SubResource( 20 )
frame = 2
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 21 )
script = SubResource( 26 )

[node name="Button" type="Button" parent="."]
margin_left = 20.0
margin_top = 23.0
margin_right = 120.0
margin_bottom = 73.0
text = "VOLTAR"

[node name="Button2" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0

[node name="YSort" type="YSort" parent="."]

[node name="carta1" type="TextureButton" parent="."]
margin_left = 285.0
margin_top = 596.0
margin_right = 428.0
margin_bottom = 803.0
rect_pivot_offset = Vector2( 104, 51 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="carta3" type="TextureButton" parent="."]
margin_left = 757.0
margin_top = 593.0
margin_right = 900.0
margin_bottom = 800.0
rect_pivot_offset = Vector2( 104, 51 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="carta5" type="TextureButton" parent="."]
margin_left = 916.0
margin_top = 593.0
margin_right = 1059.0
margin_bottom = 800.0
rect_pivot_offset = Vector2( 104, 51 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="carta4" type="TextureButton" parent="."]
margin_left = 609.0
margin_top = 595.0
margin_right = 752.0
margin_bottom = 802.0
rect_pivot_offset = Vector2( 104, 51 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="carta2" type="TextureButton" parent="."]
margin_left = 448.0
margin_top = 596.0
margin_right = 591.0
margin_bottom = 803.0
rect_pivot_offset = Vector2( 104, 51 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="cartaAmpliada" type="TextureButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 549.0
margin_top = 83.0
margin_right = 865.0
margin_bottom = 562.0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="healthBar" type="TextureProgress" parent="."]
margin_left = 1013.0
margin_top = -21.0
margin_right = 1350.0
margin_bottom = 66.0
value = 100.0
texture_under = ExtResource( 14 )
texture_progress = ExtResource( 15 )
nine_patch_stretch = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="carta1" to="." method="_on_carta1_pressed"]
[connection signal="pressed" from="carta3" to="." method="_on_carta3_pressed"]
[connection signal="pressed" from="carta5" to="." method="_on_carta1_pressed"]
[connection signal="pressed" from="carta4" to="." method="_on_carta1_pressed"]
[connection signal="pressed" from="carta2" to="." method="_on_carta2_pressed"]
[connection signal="pressed" from="cartaAmpliada" to="." method="_on_cartaAmpliada_pressed"]
